# ajoneuvodata

./: .dockerignore  .gitignore  Dockerfile  README.md  ajoneuvodata.py  app.py  import.sql  init_database.sh  pyproject.toml  schema.sql
src/ajoneuvodata/: __init__.py
